src/test/deca/syntax/valid/testInt.deca
// test integers

{
 int x = 0;
 int y = 3;
 int z = x + y;
 print(z);
}
