src/test/deca/syntax/invalid/testPrint2.deca
// print statement with quote
{
    print('Invalid print');
}
